[metadata]
name = static-markdown
version = 0.1.0.dev0
author = Bruno Bord
author-email = bruno@jehaisleprintemps.net
home-page = https://github.com/brunobord/static-markdown
description = A static web server with markdown rendering feature
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = web static markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[bdist_wheel]
universal = true

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    # Because of py-gfm incompatibility with 3.x series
	markdown<3.0
    py-gfm
    python-slugify

[options.entry_points]
console_scripts =
    serve-md = static_markdown.server:main

[options.extras_require]
dev =
    # tests
    tox
    pytest
    requests
    # Linting
    black
    isort
    flake8
    # packaging
    twine

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
