[metadata]
name = static-markdown
version = attr:static_markdown.__version__
author = Bruno Bord
author-email = bruno@jehaisleprintemps.net
home-page = https://github.com/brunobord/static-markdown
description = A static web server with markdown rendering feature
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = web static markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[bdist_wheel]
universal = true

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    markdown
    py-gfm
    python-slugify
    loguru

[options.entry_points]
console_scripts =
    serve-md = static_markdown.cli:main

[options.extras_require]
dev =
    # tests
    tox
    pytest
    requests
    pytest-xprocess
    # Linting
    black
    isort
    flake8
maintain =
    # packaging
    twine

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
